Fix native access issues